--- a/src/components/Chats/MessageList/MessageList.module.css
+++ b/src/components/Chats/MessageList/MessageList.module.css
@@ -117,6 +117,10 @@
   overflow-y: scroll;
 }
 
+.tabsContainer::-webkit-scrollbar {
+  display: none;
+}
+
 .titleContainer {
   display: flex;
   justify-content: space-between;
