--- a/src/components/LoginSignup/Form.module.css
+++ b/src/components/LoginSignup/Form.module.css
@@ -7,6 +7,10 @@
   background-color: var(--blue);
 }
 
+.formPage::-webkit-scrollbar {
+  display: none;
+}
+
 .icon {
   height: 5rem;
   width: 5rem;
